# secretMessageService

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  hasher.py  main.py  pyproject.toml  schemas.py
.github/workflows/: ci.yaml  deploy.yaml
backend/: .env.template  Dockerfile  pyproject.toml
backend/migrations/versions/: 2024_10_26_1602-a087a42b23c9_edit_messages.py
backend/src/: main.py
backend/src/api/: dao.py  views.py
backend/src/core/: config.py  db.py
backend/src/core/models/: message.py
backend/src/exceptions/: files.py
backend/src/utils/: files.py  flashes.py
backend/templates/: base.html  index.html  message.html  message_info.html
migrations/: env.py
migrations/versions/: 2024_10_26_1531-81273511bcd6_init_messages.py  2024_10_26_1600-71719bae51e6_edit_messages.py
src/: main.py  views.py
src/api/: dao.py  views.py
src/core/: config.py
src/core/models/: __init__.py  message.py
src/exceptions/: files.py
src/utils/: hasher.py
templates/: index.html  message.html  message_info.html
