[project]
name = "secretmessage"
version = "0.1.0"
description = ""
authors = [{ name = "MarkCesium", email = "cesiummark01@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi[all]>=0.115.0",
    "sqlalchemy>=2.0.36,<3",
    "asyncpg>=0.31.0",
    "alembic>=1.13.3,<2",
    "greenlet>=3.1.1,<4",
    "hypercorn>=0.17.3,<0.18",
    "aiofile>=3.9.0,<4",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
extend-select = ["I"]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
]

ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.14"
strict = true
explicit_package_bases = true
mypy_path = "."
